# ops-log-analyzer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
app/: __init__.py  config.py  llm.py  streamlit_app.py
app/agents/: cookbook.py  email_agent.py  jira_agent.py  log_reader.py  notification.py  rag_agent.py  remediation.py
app/api/: main.py
app/graph/: orchestrator.py  state.py
app/integrations/: base.py  email.py  jira.py  slack.py
app/parsers/: log_parser.py
app/rag/: __init__.py  embeddings.py  pinecone_client.py
app/services/: run_store.py
public/: index.html
